// Copyright Â© 2019 The Things Industries B.V.

syntax = "proto3";

package tti.lorawan.v3;

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "go.thethings.network/lorawan-stack/pkg/ttipb";

message TenantIdentifiers {
  option (gogoproto.populate) = false;

  string tenant_id = 1 [(gogoproto.customname) = "TenantID", (validate.rules).string = {pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$" , max_len: 36}];
}
